fix: fixes scrollbar jump when clicking into swapbox
closes #298

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+
 }
 
 body {
@@ -13,6 +14,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
+    scrollbar-gutter: stable both-edges;
 }
 
 footer {
